# Tucil2_13521060_13521101

./: .gitignore  CMakeLists.txt  Dot.cpp  Dot.hpp  DotCollection.cpp  DotCollection.hpp  README.md
ClosestPairData/: ClosestPairData.hpp
Dot/: Dot.cpp  Dot.hpp
DotCollection/: DotCollection.cpp  DotCollection.hpp
src/: compileAndRun.sh  main.cpp  matplotlibcpp.h
src/ClosestPairData/: ClosestPairData.cpp  ClosestPairData.hpp
src/Dot/: Dot.cpp  Dot.hpp
src/DotCollection/: DotCollection.cpp  DotCollection.hpp
src/Visualizer/: visualizer.cpp  visualizer.hpp
