cmake_minimum_required(VERSION 3.23)
project(closest_distance)
find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
include_directories({PYTHON_INCLUDE_DIRS} include)
add_executable(output src/main.cpp src/ClosestPairData/ClosestPairData.cpp src/Dot/Dot.cpp src/DotCollection/DotCollection.cpp src/Visualizer/visualizer.cpp)
target_link_libraries(output Python3::NumPy)